2008-09-25 Albert Chu <chu11@llnl.gov>

	* Document sr1520ml server workarounds.
	
2008-09-25 Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Fix freeipmi.conf permissions.

	* Document Intel x38ml workarounds.

	* Update workaround text/docs.

2008-09-25 Dmitry Frolov <frolov@riss-telecom.ru>

	* doc/freeipmi-faq.texi: Add FreeBSD information.

2008-09-24 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/: Fix incorrect port usage on
	non-default port conditions.
	
2008-09-24 Albert Chu <chu11@llnl.gov>

	* common/src/toolhostrange/tool-hostrange-common.c
	(pstdout_setup): Fix potential segfault scenario.

	* common/src/toolhostrange/tool-hostrange-common.c
	(pstdout_setup): Fix --eliminate corner case when one host is
	specified.
	
2008-09-23 Albert Chu <chu11@llnl.gov>

	* Fix parallel build bugs due to cycles in Makefile dependencies.

	* common/src/toolhostrange/: Split off tool hostrange into
	separate lib from common/src/toolcommon/.

	* Fix minor bugs.
	
2008-09-23 Dmitry Frolov <frolov@riss-telecom.ru>

	* libfreeipmi/src/debug/ipmi-debug.c (ipmi_obj_dump): Fix printf
	portability.
	
2008-09-23 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_check_try_new_port): Fix corner case.
	
2008-09-22 Albert Chu <chu11@llnl.gov>

	* common/src/configtool/config-tool-commit.c
	(config_commit_section): Fix return code corner case.
	
2008-09-19 Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sdr_cache.c
	(_ipmi_monitoring_sdr_cache_filename): Fix filename corner case.
	
2008-09-19 Albert Chu <chu11@llnl.gov>

	*
	ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sensors_config.c
	(_cb_sensor_state_parse): Fix corner case.
	
2008-09-17 Albert Chu <chu11@llnl.gov>

	* Fix distcheck globally.

	* ipmi-sensors/, ipmimonitoring/: Code cleanup.

	* configure.ac: update for beta release.

2008-09-16 Albert Chu <chu11@llnl.gov>
